--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
 
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.10.0</version>
+
+        </dependency>
 
 
     </dependencies>
